# EditMyRaw

./: .env.example  .gitignore  EditMyRaw.command  EditMyRaw.spec  README.md  app_main.py  build_app.sh  install.ps1  install.sh  pyproject.toml  setup_app.py
.github/workflows/: build.yml
src/editmyraw/: __init__.py  cli.py  config.py  desktop.py  gemini.py  geometry.py  pipeline.py  raw_io.py  recipe.py  server.py  sheet.py  skin.py  style.py  tone.py
src/editmyraw/web/: app.js  index.html  styles.css
